# Caushell

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/caushell/: Cargo.toml
crates/caushell-adapter-claude/: Cargo.toml
crates/caushell-adapter-claude/src/: lib.rs  main.rs
crates/caushell-adapter-codex/: Cargo.toml
crates/caushell-adapter-codex/src/: lib.rs  (+1 more)
crates/caushell-claude-hook/: Cargo.toml
crates/caushell-codex-hook/: Cargo.toml
crates/caushell-codex-hook/src/: main.rs
crates/caushell-config/: Cargo.toml
crates/caushell-config/src/: file.rs  lib.rs  loader.rs  model.rs  normalize.rs  path.rs  raw.rs
crates/caushell-core/: Cargo.toml
crates/caushell-core/src/: core.rs  lib.rs  state.rs
crates/caushell-graph/: Cargo.toml
crates/caushell-parse/: Cargo.toml
crates/caushell-passes/: Cargo.toml
crates/caushell-passes/src/: lib.rs
crates/caushell-passes/src/passes/: catastrophic_delete_guard.rs  catastrophic_shell_effects.rs  compute_effective_cwd.rs  cwd_workspace_boundary.rs  decision_assembly.rs  extract_alias_bindings.rs  extract_command_substitution_provenance.rs  extract_current_working_directory.rs  extract_endpoint_provenance.rs  extract_execution_semantics.rs  extract_function_bindings.rs  extract_implicit_startup_config.rs  extract_imported_package_provenance.rs  extract_path_facts.rs  extract_pipeline_flow.rs  extract_pipeline_stream_provenance.rs  extract_process_substitution_provenance.rs  extract_redirect_provenance.rs  extract_value_provenance.rs  extract_variable_binding_intent.rs  extract_variable_bindings.rs  git_destructive_operation_guard.rs  imported_package_execution_guard.rs  interactive_escape_guard.rs  mod.rs  outside_workspace_script_source.rs  outside_workspace_startup_config.rs  parse_command.rs  project_top_level_commands.rs  resolve_invocation.rs  resolve_policy.rs  sequence_integrity.rs  tainted_execution_guard.rs
crates/caushell-passes/src/path/: expression.rs  extract.rs  mod.rs  normalize.rs  target_match.rs
crates/caushell-passes/src/support/: alias.rs  execution_records.rs  function_overlay.rs  implicit_startup.rs  mod.rs  node_ids.rs  outside_workspace.rs  payload_hard_deny.rs  pipeline.rs  redirection.rs  shell_sink_hard_deny.rs  static_payload.rs  top_level_units.rs  variable_overlay.rs
crates/caushell-passes/src/support/hard_deny/: host_target_catalog.rs  metadata_mutation_classifier.rs  mod.rs  resolved_sink.rs  semantic_rules.rs
crates/caushell-profile/: Cargo.toml
crates/caushell-profile/profiles/: aider-chat.yaml  alias.yaml  apropos.yaml  apt-get.yaml  arch.yaml  awk.yaml  b2sum.yaml  base32.yaml  base64.yaml  basename.yaml  bash.yaml  bg.yaml  bind.yaml  blkdiscard.yaml  bunzip2.yaml  busybox.yaml  bzip2.yaml  cal.yaml  cargo.yaml  cat.yaml  cd.yaml  cfdisk.yaml  chcon.yaml  chcp.yaml  chgrp.yaml  chmod.yaml  chown.yaml  chrt.yaml  cksum.yaml  clear.yaml  cmake.yaml  cmp.yaml  code.yaml  column.yaml  comm.yaml  command.yaml  compress.yaml  conan.yaml  cp.yaml  cpio.yaml  (+230 more)
crates/caushell-profile/src/: bind.rs  builtin.rs  dispatch.rs  lib.rs  loader.rs  lookup.rs  materialize.rs  normalize.rs  projection.rs  raw.rs  recursive.rs  registry.rs  resolve.rs  types.rs  value_shape.rs
crates/caushell-query/: Cargo.toml
crates/caushell-runner/: Cargo.toml
crates/caushell-runner/src/: context.rs  lib.rs  mutation.rs  nested.rs  node_ids.rs  pass.rs  runner.rs  staged.rs
crates/caushell-runtime-security/: Cargo.toml
crates/caushell-store/: Cargo.toml
crates/caushell-types/: Cargo.toml
crates/caushell/src/: doctor.rs  lib.rs  main.rs
crates/caushell/tests/: cli.rs
integrations/vscode/: README.md  extension.js  package.json  smoke-test.js
scripts/: check-command-profile-coverage.py  install.sh  package-release.sh  verify-plugin-contracts.py  verify-release-package.sh
(+52 files in other folders)
