[package]
name = "caushell-codex-hook"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
caushell = { path = "../caushell" }
caushell-config = { path = "../caushell-config" }
caushell-runtime-security = { path = "../caushell-runtime-security" }
caushell-types = { path = "../caushell-types" }
