[package]
name = "caushell-profile"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
caushell-parse = { path = "../caushell-parse" }
caushell-types = { path = "../caushell-types" }
