[package]
name = "caushell"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
caushell-config = { path = "../caushell-config" }
caushell-core = { path = "../caushell-core" }
caushell-graph = { path = "../caushell-graph" }
caushell-query = { path = "../caushell-query" }
caushell-runtime-security = { path = "../caushell-runtime-security" }
caushell-runner = { path = "../caushell-runner" }
caushell-store = { path = "../caushell-store" }
caushell-types = { path = "../caushell-types" }
